[package]
name = "mediaproxy-router"
version = "0.1.4"
authors = ["Åke Amcoff <ake.amcoff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "2"
actix-rt = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2"
http = "0.2"
mediaproxy-common = "0.1"
futures = "0.3"
